:hammer: Fix banner image cropping issue

--- a/src/app/components/banner.module.css
+++ b/src/app/components/banner.module.css
@@ -6,7 +6,8 @@
 
 .banner-img{
     width: 100%;
-    height: 100%;
+    height: 20rem;
+    object-fit: cover;
 }
 
 .banner-container > div{
@@ -19,31 +20,9 @@
 
 .banner-container > h1{
     position: absolute;
-    font-size: 4rem;
+    font-size: 2.5rem;
     bottom: 5%;
     left: 5%;
     color: white;
     z-index: 10;
 }
-
-/* Mobile Phones - flex-direction: column-reverse */
-@media (min-width: 320px) {
-    .banner-container{
-        height: 20vh;
-    }
-  }
-  
-  /* Larger Mobile Phones - flex-direction: column-reverse */
-  @media (min-width: 480px) {
-    .banner-container{
-        height: 50vh;
-    }
-
-  }
-  
-  /* Tablets Landscape / Small Laptops */
-  @media (min-width: 1024px) {
-    .banner-container{
-        height: 50vh;
-    }
-  }
